# para

./: CMakeLists.txt  README.md  plan.md  separate_log.txt  spec.md
src/: main.cpp
src/client/: client.cpp  client.hpp
src/common/: data_structures.hpp  types.hpp
src/game/: game_server.cpp  game_server.hpp  match.cpp  match.hpp
src/scheduler/: thread_pool.hpp  work_stealing_queue.hpp
src/tasks/: client_task.hpp  match_task.hpp
